app/map/map.css
#map-nation {
  /* width: 100%; */
  height: 80vh;
  min-height: 520px;
  margin: 0 5em auto;
  aspect-ratio: 1.7 / 1;
}

#map-jurisdiction {
  height: 65vh;
  min-height: 550px;
  aspect-ratio: 1 / 1.09;
}

/* tablet L */
@media only screen and (max-width: 1024px) {
  #map-nation {
    width: 100%;
    height: auto;
    /* min-height: 520px; */
    margin-bottom: 2.5em !important;
  }

  #map-jurisdiction {
    height: 30vh;
    min-height: 300px;
  }
}

/*  mobile and tablet M*/
@media only screen and (max-width: 900px) {
  #map-nation {
    width: 100%;
    min-height: 250px;
  }
}

.map .nation.sort-0,
.map .states.sort-0 {
  fill: var(--green-700);
  stroke: var(--white);
  opacity: 0.1;
  stroke-width: 0.5rem;
  stroke-linejoin: round;
  paint-order: stroke;
}

.map .nation.sort-5,
.map .jurisdiction-polygons.sort-5 path {
  fill: none;
  stroke: var(--green-900);
  opacity: 1;
  stroke-width: 2px;
  stroke-linejoin: round;
}

.map .states {
  fill: none;
  stroke-width: 1px;
  stroke: var(--green-300);
  stroke-linejoin: round;
}

.map .counties {
  fill: none;
  stroke: var(--green-grey);
  stroke-width: 0.25px;
  stroke-linejoin: round;
}

.map .jurisdiction-polygons.sort-1 path {
  fill: var(--green-700);
  stroke: none;
}

.map .jurisdiction-borders.sort-6 path {
  stroke: var(--green-700);
  stroke-width: 6px;
  fill: none;
  stroke-linejoin: round;
  filter: blur(1px);
}

.map .jurisdiction-borders.sort-7 path {
  stroke: var(--yellow);
  stroke-width: 2px;
  fill: none;
  stroke-linejoin: round;
}

.map .consulates.sort-8 circle {
  fill: var(--yellow);
  stroke: var(--white);
  stroke-width: 8px;
  opacity: 0.6;
}

.map .consulates.sort-9 circle {
  fill: var(--yellow);
  stroke: var(--green-900);
  stroke-width: 3px;
}

.map .points circle {
  fill: #9dd89c;
  /* mix-blend-mode: screen; */
  opacity: 0.9;
}

.shine {
  mix-blend-mode: screen;
}

